--- a/src/_includes/components/footer.njk
+++ b/src/_includes/components/footer.njk
@@ -16,7 +16,7 @@
     <div class="row">
       <div class="col-xs-12 col-sm-6">
         <ul class="list-clear list-inline fluid-8-r">
-          <li class="pr-16"> <a class="menu-desktop" href="/">Design systems </a> </li>
+          <li class="pr-16"> <a class="menu-desktop" href="/">Seo prompts generator </a> </li>
           <li class="pr-16"> <a  class="menu-desktop" href="/blog">Blog </a></li>
           <li class="pr-16"> <a  class="menu-desktop" href="/cursos">Cursos </a></li>
           <li class="pr-16"> <a  class="menu-desktop" href="/about">About</a></li>
