--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -155,6 +155,7 @@ a {
   margin-bottom: 24px;
 
   border-width: 1px;
+  border-color: transparent;
   border-radius: 50px;
     color: $c-primary;
   max-width: 100%;
