--- a/src/_includes/_index.njk
+++ b/src/_includes/_index.njk
@@ -46,7 +46,7 @@ layout: base.njk
               </div>
               <div class="row">
                   <div class="col-xs-6">
-                      <button type="button" class="btn btn-primary btn--full" value="Generate text" onclick="generarTexto()">Generate text</button>
+                      <button type="button" class="btn btn-primary btn--full" value="Generate text" onclick="generarTexto()">Generate Prompt</button>
                   </div>
               </div>
           </div>
