--- a/src/_includes/components/header.njk
+++ b/src/_includes/components/header.njk
@@ -1,5 +1,5 @@
 <header>
-    <div class="container-global mx-auto  w-100">
+    <div class="container mx-auto  w-100">
         <div class="row  ">
             <div class="col-xs-4 is-flex">
                 <a aria-label="link logo-wrap " class="logo-wrap" href="/">
