--- a/src/_includes/_index.njk
+++ b/src/_includes/_index.njk
@@ -13,53 +13,61 @@ layout: base.njk
         for seo markdown
       </h2>
       <form id="myForm">
-
         <div class="row">
-          <div class="col-xs-6">
-              <div class="row text-12-r">
-                  <div class="col-xs-12">
-                      <input placeholder=" Website" class="input" type="text" id="input8" name="input8"><br>
-                      <input placeholder=" Expert in " class="input" type="text" id="input1" name="input1"><br>
-                      <input placeholder=" What is the post about?" class="input" type="text" id="input2" name="input2"><br>
-                  </div>
-              </div>
-              <div class="row">
-                  <div class="col-xs-6">
-                      <input placeholder=" Main Keyword" class="input" type="text" id="input4" name="input4"><br>
-                  </div>
-              </div>
-              <div class="row">
-                  <div class="col-xs-4">
-                      <input placeholder=" Keyword 1" class="input" type="text" id="input5" name="input5"><br>
-                  </div>
-                  <div class="col-xs-4">
-                      <input placeholder=" Keyword 2" class="input" type="text" id="input6" name="input6"><br>
-                  </div>
-                  <div class="col-xs-4">
-                      <input placeholder=" Keyword 3" class="input" class="btn mb-24" type="text" id="input7" name="input7"><br>
-                  </div>
-              </div>
-              <div class="row mb-24">
-                  <div class="col-xs-6">
-                      <input placeholder=" Post length" class="input" type="text" id="input3" name="input3"> <br>
-                  </div>
-              </div>
-              <div class="row">
-                  <div class="col-xs-6">
-                      <button type="button" class="btn btn-primary btn--full" value="Generate text" onclick="generarTexto()">Generate Prompt</button>
-                  </div>
-              </div>
-          </div>
-          <div class="col-xs-6">
-              <div id="resultadowrap" class=" hidden">
-                  <div id="resultado" class="text-12-r p-16 border-1 mb-64 "></div>
-              </div>
-              <button id="contarboton" class="btn btn-secondary hidden mb-24" onclick="copiarTexto()">Copy text</button>
-              <p id="contador"></p>
-          </div>
-      </div>
 
 
+          <div class="col-xs-6">
+            <div class="row text-12-r">
+              <div class="col-xs-12">
+                <input placeholder=" Website" class="input" type="text" id="input8" name="input8"><br>
+                <input placeholder=" Expert in " class="input" type="text" id="input1" name="input1"><br>
+                <input placeholder=" What is the post about?" class="input" type="text" id="input2" name="input2"><br>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-xs-6">
+                <input placeholder=" Main Keyword" class="input" type="text" id="input4" name="input4"><br>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-xs-4">
+                <input placeholder=" Keyword 1" class="input" type="text" id="input5" name="input5"><br>
+              </div>
+              <div class="col-xs-4">
+                <input placeholder=" Keyword 2" class="input" type="text" id="input6" name="input6"><br>
+              </div>
+              <div class="col-xs-4">
+                <input placeholder=" Keyword 3" class="input" class="btn mb-24" type="text" id="input7"
+                  name="input7"><br>
+              </div>
+            </div>
+            <div class="row mb-24">
+              <div class="col-xs-6">
+                <input placeholder=" Post length" class="input" type="text" id="input3" name="input3"> <br>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-xs-6">
+                <button type="button" class="btn btn-primary btn--full" value="Generate text"
+                  onclick="generarTexto()">Generate Prompt</button>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="col-xs-6">
+            <div id="resultadowrap" class=" hidden">
+              <div id="resultado" class="text-12-r p-16 border-10 mb-24 "></div>
+            </div>
+            <div class="row">
+              <div class="col-xs-12 text-center">
+                <button id="contarboton" class="btn btn-secondary btn--medium hidden mb-24" onclick="copiarTexto()">Copy
+                  text</button>
+                <p id="contador"></p>
+              </div>
+            </div>
+          </div>
+        </div>
       </form>
     </div>
   </div>
@@ -71,24 +79,14 @@ layout: base.njk
       </span>
     </div>
   </section>
-
 </article>
 <script>
   function generarTexto() {
     event.preventDefault();
-
     var contarboton = document.getElementById('contarboton');
     var resultadowrap = document.getElementById('resultadowrap');
-
-
-
-
-
-
     contarboton.classList.remove('hidden');
     resultadowrap.classList.remove('hidden');
-    
-
     var palabra1 = document.getElementById("input1").value;
     var palabra2 = document.getElementById("input2").value;
     var palabra3 = document.getElementById("input3").value;
@@ -126,9 +124,6 @@ eleventyComputed:
 ---
 Content of the blog of about ${palabra3} words Here we will put the blog content generated by chat gpt with the previously mentioned guidelines  
 `;
-
-
-
     document.getElementById("resultado").textContent = resultado;
     document.getElementById("contador").textContent = "Counter words " + contarPalabras(resultado);
   }
@@ -136,13 +131,8 @@ Content of the blog of about ${palabra3} words Here we will put the blog content
     var palabras = texto.split(" ");
     return palabras.length;
   }
-
-
-
   function copiarTexto() {
-
     event.preventDefault();
-
     var resultado = document.getElementById("resultado").textContent;
     // Crear un elemento de texto temporal
     var tempInput = document.createElement("input");
