--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -774,3 +774,11 @@ a:hover {
   #resultado{
     border-radius: 26px;
   }
+
+  .border-10 {
+    border: 10px solid #f9f9f9;
+}
+
+.btn:hover{
+  cursor: pointer;
+}
