--- a/src/_includes/components/header.njk
+++ b/src/_includes/components/header.njk
@@ -40,6 +40,7 @@
                     </div>
                     <ul class="list-clear   text-right is-flex  content-end menu-desktop-wrap ">
                         <li class="pr-16"> <a aria-label="link menu-link" class="menu-desktop" href="/">Seo prompts </a> </li>
+                        <li class="pr-16"> <a aria-label="link menu-link" class="menu-desktop" href="listado/">Listado </a> </li>
 
                              <li class="pr-16"> <a aria-label="link  menu-link superior" class="menu-desktop" href="/about">Nosotros</a></li>
                     </ul>
