--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -68,7 +68,7 @@ html {
 body {
   overflow-x: hidden;
   color: $c-primary;
-  background-color: #fff;
+  background-color: #F7F7F9;
   
 
   scroll-behavior: smooth;
@@ -781,4 +781,54 @@ a:hover {
 
 .btn:hover{
   cursor: pointer;
+}
+
+.box1{
+  position: relative;
+  border-radius: 50px;
+  padding: 24px;
+  background-color: #ffffff;
+  min-height: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  transition: .3s ease all;
+  .box1-arrow{
+    transition: .3s ease all;
+    position:absolute;
+    right: 30px;
+    opacity: 0;
+  }
+
+
+&:hover{
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  .box1-arrow{
+    opacity: 1;
+  }
+
+
+}
+
+
+  .badge{
+    background-color: #2E2F33;
+    min-width: 50px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+    color: white;
+    display: flex;
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+  }
+
+.box1-footer{
+  display: flex;
+
+  gap: 20px;
+  align-items: flex-end;
+}
+
 }
