Implement sorting for categories and pages in sitemap, add new Downsub page, and update navigation links. Clean up permalinks in existing pages.

--- a/src/_includes/components/footer.njk
+++ b/src/_includes/components/footer.njk
@@ -8,7 +8,7 @@
         <div class="text-14-r mb-16">
           Se el primero en enterarte de todo
         </div>
-        <div class="pb-32"><a href="/unirte-a-newsletter"><button class="btn btn-primary btn--mini "> Únete ahora</button></a></div>
+        {# <div class="pb-32"><a href="/unirte-a-newsletter"><button class="btn btn-primary btn--mini "> Únete ahora</button></a></div> #}
 
 
       </div>
@@ -17,9 +17,7 @@
       <div class="col-xs-12 col-sm-6">
         <ul class="list-clear list-inline fluid-8-r">
           <li class="pr-16"> <a class="menu-desktop" href="/">Seo prompts generator </a> </li>
-          <li class="pr-16"> <a  class="menu-desktop" href="/blog">Blog </a></li>
-          <li class="pr-16"> <a  class="menu-desktop" href="/cursos">Cursos </a></li>
-          <li class="pr-16"> <a  class="menu-desktop" href="/about">About</a></li>
+
         </ul>
 
       </div>
