--- a/src/_includes/components/header.njk
+++ b/src/_includes/components/header.njk
@@ -33,7 +33,7 @@
                         <div class="menu-mobile-wrap">
                             <ul class="list-clear ">
                                 <li> <a aria-label="link menu superior" class="menu-mobile-li" href="/">Seo prompts </a></li>
-     
+                                <li> <a aria-label="link menu superior" class="menu-mobile-li" href="/tracking">Tracking</a></li>
                                                   <li> <a aria-label="link menu superior" class="menu-mobile-li" href="/about">  NOSOTROS</a></li>
                             </ul>
                         </div>
@@ -42,6 +42,7 @@
                         <li class="pr-16"> <a aria-label="link menu-link" class="menu-desktop" href="/">Seo prompts </a> </li>
                         <li class="pr-16"> <a aria-label="link menu-link" class="menu-desktop" href="/listado">Listado </a> </li>
                         <li class="pr-16"> <a aria-label="link menu-link" class="menu-desktop" href="/downsub">Downsub </a> </li>
+                        <li class="pr-16"> <a aria-label="link menu-link" class="menu-desktop" href="/tracking">Tracking </a> </li>
 
                              <li class="pr-16"> <a aria-label="link  menu-link superior" class="menu-desktop" href="/about">Nosotros</a></li>
                     </ul>
