--- a/src/_includes/components/header.njk
+++ b/src/_includes/components/header.njk
@@ -30,11 +30,13 @@
                                 <span></span>
                             </div>
                         </div>
-                        <div class="menu-mobile-wrap">
-                            <ul class="list-clear ">
-                                <li> <a aria-label="link menu superior" class="menu-mobile-li" href="/">Seo prompts </a></li>
-                                <li> <a aria-label="link menu superior" class="menu-mobile-li" href="/tracking">Tracking</a></li>
-                                                  <li> <a aria-label="link menu superior" class="menu-mobile-li" href="/about">  NOSOTROS</a></li>
+                        <div class="menu-mobile-wrap" id="menu-mobile-wrap">
+                            <ul class="list-clear menu-mobile-list">
+                                <li><a aria-label="Seo prompts" class="menu-mobile-li" href="/">Seo prompts</a></li>
+                                <li><a aria-label="Listado" class="menu-mobile-li" href="/listado">Listado</a></li>
+                                <li><a aria-label="Downsub" class="menu-mobile-li" href="/downsub">Downsub</a></li>
+                                <li><a aria-label="Tracking" class="menu-mobile-li" href="/tracking">Tracking</a></li>
+                                <li><a aria-label="Nosotros" class="menu-mobile-li" href="/about">Nosotros</a></li>
                             </ul>
                         </div>
                     </div>
