--- a/src/assets/sass/_menu.scss
+++ b/src/assets/sass/_menu.scss
@@ -17,16 +17,16 @@
 
 #menu-toggle {
   position: relative;
-  z-index: 10;
+  z-index: 9999;
   cursor: pointer;
 }
 .menu-mobile-wrap {
   position: fixed;
+  z-index: 9998;
   background: $c-primary;
   top: 0;
   bottom: 0;
   width: 100vw;
-
   height: 100vh;
   left: -100vw;
   transition: left 0.24s ease-out;
@@ -36,12 +36,24 @@
   align-items: center;
   justify-content: center;
   text-align: center;
+  overflow-y: auto;
+  .menu-mobile-list li {
+    list-style: none;
+    margin: 20px 0;
+    a {
+      color: #fff;
+      text-decoration: none;
+      font-size: 1.1rem;
+      display: block;
+      padding: 8px 16px;
+    }
+  }
   ul.list-clear li {
     list-style: none;
     margin: 24px 0;
-a{
-  color: #fff;
-}
+    a {
+      color: #fff;
+    }
   }
 
 
